# fastgrup

./: .gitignore  README.md  main.py  pyproject.toml
S04_types/: S04_01_autocompletado.py  S04_02_mejora autocompletado.py  S04_03_deteccion_errores.py  S04_06_tuple_set.py  S04_10_optional.py  S04_11_parametros_opcionales.py  S04_12_clases.py  S04_13_pydantic.py
practicas_activas/: api_product.py
s05_tutorial/s05_02_first_step/: main.py
s05_tutorial/s05_03_path_parameter/: fixed_value.py  main.py  main_type.py  orders_matter.py  path_param.py
s05_tutorial/s05_04_query_parameter/: intro_query_params.py  multiple_params.py  optional_params.py  query_type_conversion.py  required_optional_default.py  required_query_params.py
s05_tutorial/s05_05_request_body/: ex01_base_model.py  ex02_base_model.py  ex04_request_body_path_query.py
