[tool.poetry]
name = "fastgrup"
version = "0.1.0"
description = ""
authors = ["Tubarao19 <miguelmonsalvo19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.112.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
